tests/interpreter/fail/014-sqrt.hyg
assert(sqrt(4.0f) = 1.0f)